// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationships createRelationshipsNode adds value when relationshipsList is present match snapshot 1`] = `
{
  "edges": {
    "fields": [
      {
        "config": {},
        "name": "id",
        "type": "string",
        "values": [
          "test",
        ],
      },
      {
        "config": {},
        "name": "source",
        "type": "string",
        "values": [
          "test-source",
        ],
      },
      {
        "config": {},
        "name": "target",
        "type": "string",
        "values": [
          "test-target",
        ],
      },
      {
        "config": {},
        "name": "mainStat",
        "type": "string",
        "values": [
          "Test Label ExternalId",
        ],
      },
    ],
    "length": 1,
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "edges",
    "refId": "A",
  },
  "nodes": {
    "fields": [
      {
        "config": {},
        "name": "id",
        "type": "string",
        "values": [
          "test-source",
          "test-target",
        ],
      },
      {
        "config": {},
        "name": "title",
        "type": "string",
        "values": [
          "test source description",
          "Test Target descriptipn",
        ],
      },
      {
        "config": {},
        "name": "mainStat",
        "type": "string",
        "values": [
          "Test Source",
          "Test  Target",
        ],
      },
    ],
    "length": 2,
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "nodes",
    "refId": "A",
  },
}
`;

exports[`Relationships createRelationshipsNode with empty relationships list match snapshot 1`] = `
{
  "edges": {
    "fields": [
      {
        "config": {},
        "name": "id",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "name": "source",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "name": "target",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "name": "mainStat",
        "type": "string",
        "values": [],
      },
    ],
    "length": 0,
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "edges",
    "refId": "A",
  },
  "nodes": {
    "fields": [
      {
        "config": {},
        "name": "id",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "name": "title",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "name": "mainStat",
        "type": "string",
        "values": [],
      },
    ],
    "length": 0,
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "nodes",
    "refId": "A",
  },
}
`;
